--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
     <div id="welcome-screen">
         <div class="jiit-logo">
             <!-- Replaced text with the uploaded logo image, styled as a circular badge -->
-            <img src="image_f07bf5.jpg" alt="JIIT Logo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+            <img src="jiit.jpg" alt="JIIT Logo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
         </div>
         <h1 class="welcome-title">Jaypee Institute of<br>Information Technology</h1>
         <p class="welcome-subtitle">Are you from this college?</p>
@@ -1039,3 +1039,4 @@
 
 </body>
 </html>
+
